test/good/sets/for05.px

for x in {} do
    print x
for x in {} by -5 do
    print x
print true
