test/bad/loops/for18.px

for x in true...false by true do
    skip
